--- a/Exercise2/static-design/src/app/aside/aside.component.html
+++ b/Exercise2/static-design/src/app/aside/aside.component.html
@@ -1,4 +1,4 @@
-<div class="index">
+<div class="index-aside">
     <div class="header">
         <p class="title">XX INDEX</p>
     </div>
@@ -23,3 +23,12 @@
             </div>
         </div>
     </div>
+    <div class="team-aside">
+        <div class="header">
+            <p class="title">team</p>
+        </div>
+        <app-team></app-team>
+    </div>
+    
+    
+    
