--- a/Exercise2/static-design/src/app/app.component.sass
+++ b/Exercise2/static-design/src/app/app.component.sass
@@ -4,11 +4,13 @@
          @content 
   
   @if $breakpoint == small 
-    @media (max-width: 700px) 
+    @media (max-width: 800px) 
          @content 
 .main
     display: grid
     grid-template-columns: 2fr 1fr
+    grid-template-rows: auto auto
+    grid-gap: 1.5em 0em
     padding-right: 10rem
     padding-left: 10rem
     padding-top: 30px
@@ -16,25 +18,35 @@
     .body-container
         padding-right: 15px
     @include respond(medium)
-        grid-template-columns: 1fr
+        grid-template-columns: 2fr 1fr
         padding-right: 1rem
         padding-left: 1rem
         .body-container
             padding-right: 0
             padding-bottom: 15px 
-    
+    @include respond(small)
+        grid-template-columns: 1fr
 
 .container
-    background-color: #e1eaf1
-    
+    background-color: #eff1f5
+    height: 100vh
+    @include respond(medium)
+        grid-template-columns: 2fr 1fr
+    @include respond(small)
+        height: 100%
+
+
 app-ongoing-project
     display: grid
+    grid-area: 1 / 1 / 2 / 2
     grid-template-columns: 1fr 1fr 1fr
     @include respond(medium)
         grid-template-columns: 1fr 1fr
     @include respond(small)
         grid-template-columns: 1fr
-
+app-dynamic
+    grid-area: 2 / 1 / 3 / 2
+    
 .onGoingText
     padding: 15px
     background: #ffffff
@@ -45,8 +57,19 @@ app-ongoing-project
     .title
         font-weight: 600
     a
+        text-decoration: none
         color: #00d9e0
-        text-align: right        
+        text-align: right  
+
+app-aside
+    padding-bottom: 20px
+    grid-area: 1 / 2 / 3 / 3
+    @include respond(medium)
+        padding-left: 1rem
+    @include respond(small)
+        grid-area: 1 / 1 / 2 / 2
+        padding-left: 0
+              
         
     
         
