--- a/Exercise2/static-design/src/app/aside/aside.component.sass
+++ b/Exercise2/static-design/src/app/aside/aside.component.sass
@@ -1,4 +1,5 @@
 
+
 .header
     padding-left: 15px
     background: #ffffff
@@ -8,7 +9,8 @@
         font-weight: 600
 
 .content
-    background: #ffffff    
+    background: #ffffff  
+    margin-bottom: 20px  
 
 .content-item        
     img
@@ -16,6 +18,8 @@
         margin-left: auto
         margin-right: auto
         max-width: 300px
+        padding-top: 25px
+        padding-bottom: 25px
 
 .content-description
     display: grid
