--- a/Exercise2/static-design/src/app/profile/profile.component.html
+++ b/Exercise2/static-design/src/app/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="route">
-        <p>Home / Dashboard / Workplace </p>
+        <p>Home / Dashboard / <b>Workplace</b></p>
     </div>
     <div class="profile-container">
         <div class="info">
