--- a/Exercise2/static-design/src/app/profile/profile.component.sass
+++ b/Exercise2/static-design/src/app/profile/profile.component.sass
@@ -16,10 +16,11 @@ $paragraphcolor: #696969
 .profile-img 
     width: 4rem    
     border-radius: 50%
+
 p, span
     font-size: 0.9rem
     color: $paragraphcolor
-h2 
+h2 , b
     font-weight: 500
     span
         font-weight: normal
