--- a/Exercise2/static-design/src/app/profile/profile.component.html
+++ b/Exercise2/static-design/src/app/profile/profile.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="profile-container">
         <div class="info">
-            <img class="image" src="../../assets/imgs/profile.jpg" alt="profile" class="profile-img">
+            <img class="image" src="../../assets/imgs/log/4.jpg" alt="profile" class="profile-img">
             <div class="profile-info">
                 <h2> Good Morning, Serati Ma, I wish you happiness every day!</h2>
                 <p>Interaction expert | Ant gold service-some certain business group platform department-a certain technical department-UED</p>
