--- a/Exercise2/static-design/src/app/profile/profile.component.sass
+++ b/Exercise2/static-design/src/app/profile/profile.component.sass
@@ -1,7 +1,11 @@
 $backgroundcolor: #fafafa
 $paragraphcolor: #696969
 
-@mixin respond($breakpoint) 
+@mixin respond($breakpoint)
+  @if $breakpoint == big
+    @media (max-width: 1500px)
+        @content
+
   @if $breakpoint == medium 
     @media (max-width: 1000px) 
          @content 
@@ -31,7 +35,10 @@ h2 , b
     padding-right: 10rem
     padding-left: 10rem
     background: $backgroundcolor
-    box-shadow: 0px 0px 10px 0px #0000002d  
+    box-shadow: 0px 0px 10px 0px #0000002d
+    @include respond(big)
+        padding-right: 0rem
+        padding-left: 2rem
     @include respond(medium)
         padding-right: 1rem
         padding-left: 1rem
@@ -42,6 +49,7 @@ h2 , b
     grid-template-columns: 60% 40%
     @include respond(medium)
         grid-template-columns: 100% 
+        text-align: right
     
 .info 
     display: grid
@@ -68,6 +76,7 @@ h2 , b
     text-align: right
     @include respond(medium)
         margin-top: 1rem
+        text-align: right
     @include respond(small)
         grid-template-columns: 1fr
         width: 100%
