--- a/Exercise2/static-design/src/styles.css
+++ b/Exercise2/static-design/src/styles.css
@@ -1,7 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 /*# sourceMappingURL=styles.css.map */
 
-* {
+body {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    background: #000;
 }
