--- a/static-design/src/app/profile/profile.component.html
+++ b/static-design/src/app/profile/profile.component.html
@@ -6,7 +6,7 @@
         <div class="info">
             <img class="image" src="../../assets/imgs/log/4.jpg" alt="profile" class="profile-img">
             <div class="profile-info">
-                <h2> Good Morning, Serati Ma, I wish you happiness every day!</h2>
+                <h2> Good Morning, Stanley Morales, I wish you happiness every day!</h2>
                 <p>Interaction expert | Ant gold service-some certain business group platform department-a certain technical department-UED</p>
             </div>
         </div>    
